ingresses/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - <YOUR_DOMAIN>
      secretName: echo-tls-6m6bq
  rules:
    - host: <YOUR_DOMAIN>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: <NAME_OF_YOUR_SERVICE>
                port:
                  number: 80
  ingressClassName: nginx # MAKE SURE TO INGRESS CLASS NAME IS SAME AS IN KUBERNETES DASHBOARD IF ITS NOT IT WILL NOT PROVIDE YOU WITH EXTERNAL IP
